revert file renaming

--- a/Expression String Parser/Expression String Parser.vcxproj.filters
+++ b/Expression String Parser/Expression String Parser.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Parser.cpp">
+    <ClCompile Include="ExprStrParser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Source.cpp">
@@ -23,7 +23,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Parser.h">
+    <ClInclude Include="ExprStrParser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
