Made normal tokenizer, added somehow skipped optimization

--- a/Expression String Parser/Expression String Parser.vcxproj.filters
+++ b/Expression String Parser/Expression String Parser.vcxproj.filters
@@ -15,15 +15,21 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="ExprStrParser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Source.cpp">
+    <ClCompile Include="ExprStrTokenizer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ExprStrParser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ExprtStrTokenizer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
